--- a/css/main.css
+++ b/css/main.css
@@ -118,8 +118,10 @@ img.pokemon.small {max-height: 120px;
 
 .footer {
   background-color: rgb(0,0,0);
+  height: 70px;
   border: none;
   padding-bottom: 20px;
+  padding-top: 20px;
 }
 
 .footer-nav li a {
@@ -141,6 +143,10 @@ img.pokemon.small {max-height: 120px;
   background-size: cover;
 }
 
+#typeImg {
+  max-width: 40px;
+}
+
 .raidWeatherIcon{
   max-width: 30px;
 }
@@ -152,4 +158,13 @@ img.pokemon.small {max-height: 120px;
 div#raid-icons {
   justify-content: space-between;
   display: flex;
+}
+
+.equipo {
+  margin: 0 !important;
+  float: none !important;
+}
+
+.equipo-div {
+  margin: 10px 10px 40px 10px;
 }
