--- a/css/main.css
+++ b/css/main.css
@@ -168,3 +168,12 @@ div#raid-icons {
 .equipo-div {
   margin: 10px 10px 40px 10px;
 }
+
+
+#addPokemon{
+  margin: 20px;
+}
+
+#pokedex-bottom{
+  text-align: center;
+}
